--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cssnano": "^3.7.3",
     "grunt": "^1.0.1",
     "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
     "pixrem": "^3.0.1",
     "time-grunt": "^1.4.0"
